# LR6

Task_1/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  func.h  functions.cpp  ivalidation.cpp  main.cpp  solution.cpp  test.cpp
Task_1/.cache/clangd/index/: func.h.C64D8EC479ADD4B6.idx  functions.cpp.C699A83F224554E6.idx  ivalidation.cpp.1B1FE2B6EB4CEB70.idx  main.cpp.2E0B1678931B5668.idx  solution.cpp.8A632A823A12C7B8.idx
Task_2/: CMakeLists.txt  func.h  functions.cpp  ivalidation.cpp  main.cpp  solution.cpp  test  test.cpp
Task_2/.cache/clangd/index/: func.h.C64D8EC479ADD4B6.idx  functions.cpp.C699A83F224554E6.idx  ivalidation.cpp.1B1FE2B6EB4CEB70.idx  main.cpp.2E0B1678931B5668.idx  solution.cpp.8A632A823A12C7B8.idx
Task_3/: CMakeLists.txt  func.h  functions.cpp  ivalidation.cpp  main.cpp  solution.cpp  test  test.cpp
Task_3/.cache/clangd/index/: func.h.FD04B12813EE8557.idx  functions.cpp.7A7910BF9F089255.idx  ivalidation.cpp.34C88810B93C1EB5.idx  main.cpp.92BDF19F6CD04A7B.idx  solution.cpp.C1A81826BCB76326.idx
